FIxed phone calc button overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,13 +36,13 @@ $calculator-display-background: #caffb9;
 
 .calculatorButtons {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: 22% 22% 22% 22%;
   background-color: $calculator-background-color;
   padding: 10px;
   margin: auto;
   width: 250px;
   height: 300px;
-  grid-column-gap: 10px;
+  grid-column-gap: 3%;
   border: 1px solid black;
   border-radius: 0px 0px 22px 22px;
   box-shadow: 0px 1px rgba(0, 0, 0, 0.8);
